--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
   </head>
   <body>
+    <p>  This is how the hall of your apartment will look!</p>
     <!-- <model-viewer> HTML element -->
     <model-viewer bounds="tight" enable-pan src="Apartment 2.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls environment-image="pillars_1k.hdr" poster="poster.webp" shadow-intensity="1" auto-rotate>
       <button class="Hotspot" slot="hotspot-1" data-position="-0.3259215468232666m 0.03517569075208993m 0.8203686642972405m" data-normal="0m -0.07763991328142765m -0.9969814661595532m" data-visibility-attribute="visible">
